# Merlin

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FREE.md  EXTERNAL_APIS.md  FINAL_SUMMARY.md  FREE_TIER_LIMITS.md  HOW_TO_USE_OPTILLM.md  IMPLEMENTATION_SUMMARY.md  JWT_IMPLEMENTATION.md  LICENSE  OPTILLM_IMPLEMENTATION_SUMMARY.md  OPTILLM_QUICK_REFERENCE.md  OPTILLM_TECHNIQUES.md  QUICK_START.md  README.md  SETUP_EXTERNAL_APIS.md  TESTING.md  UI_VALIDATION_IMPLEMENTATION.md  docker-compose.yml  render.yaml  setup-and-test.ps1  test-optillm.bat  test-optillm.ps1  test_optillm.ps1
backend/: Dockerfile  TESTING.md  build.sh  fix_timezone_migration.sql  migration.sql  pyproject.toml  reset_db.py  test_optillm.py  test_rate_limit.py
backend/src/merlin/: __init__.py  main.py
backend/src/merlin/api/: deps.py  health.py
backend/src/merlin/core/: config.py  rate_limit.py  security.py
backend/src/merlin/db/: models.py  session.py  workflow_models.py
backend/src/merlin/optillm/: __init__.py  batching.py  bon.py  conversation_logger.py  cot_decoding.py  cot_reflection.py  entropy_decoding.py  inference.py  leap.py  mcts.py  moa.py  plansearch.py  pvg.py  reread.py  rstar.py  rto.py  self_consistency.py  server.py  thinkdeeper.py  thinkdeeper_mlx.py  z3_solver.py
backend/src/merlin/repositories/: chat_repo.py  key_repo.py  user_repo.py  workflow_repo.py
backend/src/merlin/schemas/: auth.py  chat.py  keys.py  workflow.py
backend/src/merlin/services/: external_api_service.py  (+2 more)
backend/tests/: conftest.py  test_chat.py  test_keys.py
(+66 files in other folders)
